--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@ Author URL: http://w3layouts.com
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <title>Alexander Personal Portfolio Category Bootstrap Responsive Website Template | About : W3layouts</title>
+  <title>Web-Souk</title>
 
   <!-- google fonts -->  
   <link href="//fonts.googleapis.com/css2?family=Jost:wght@300;400;600&display=swap" rel="stylesheet">
@@ -111,7 +111,7 @@ Author URL: http://w3layouts.com
                             <p>Uttar Pradesh, India</p>
                         </div>
                         <div class="single-info"><span>Email:</span>
-                            <p><a href="mailto:alexander@mail.com">Modanwaladi@gmail.com</a></p>
+                            <p><a href="mailto:modanwaladi@gmail.com">Modanwaladi@gmail.com</a></p>
                         </div>
                     </div>
                     <div class="my-social mt-lg-5 mt-4">
