--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@ Author URL: http://w3layouts.com
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <title>Alexander Personal Portfolio Category Bootstrap Responsive Website Template | Contact : W3layouts</title>
+  <title>Web-Souk</title>
 
   <!-- google fonts -->  
   <link href="//fonts.googleapis.com/css2?family=Jost:wght@300;400;600&display=swap" rel="stylesheet">
@@ -108,7 +108,7 @@ Author URL: http://w3layouts.com
                         </div>
                         <div class="cont-right">
                             <h6>Email Me</h6>
-                            <p><a href="mailto:example@mail.com" class="mail">Modanwaladi@mail.com</a></p>
+                            <p><a href="mailto:example@mail.com" class="mail">Modanwaladi@gmail.com</a></p>
                         </div>
                     </div>
                     <div class="cont-top margin-up">
