--- a/contact.html
+++ b/contact.html
@@ -108,7 +108,7 @@ Author URL: http://w3layouts.com
                         </div>
                         <div class="cont-right">
                             <h6>Email Me</h6>
-                            <p><a href="mailto:example@mail.com" class="mail">Modanwaladi@gmail.com</a></p>
+                            <p><a href="Modanwaladi@gmail.com" class="mail">Modanwaladi@gmail.com</a></p>
                         </div>
                     </div>
                     <div class="cont-top margin-up">
